# opencl-learning

./: CMakeLists.txt  README.md  Utils.h  build.ps1  main.cpp  vector_add_kernel.cl
kernels/: image_morphology.cl
